test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_readln_no_arguments.draco
proc main() void :  readln(); corp;
