test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_error_stmt_non_string_arg.draco
string MSG;

proc main() void : error(MSG); corp;

